# pyopcode

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  appveyor.yml  bld.bat  environment.yml  pkg_conf.py  setup.py  tasks.py
conda-recipe/: bld.bat  build.sh  meta.yaml
pyopcode/: __init__.py  bld.bat  test.py
pyopcode/src/: CMakeLists.txt  CmakeLists.txt  exception.cpp  gil.cpp  interface.cpp  interface.h  pyopcode.cpp  pyopcode.h
pyopcode/src/numpy_boost/: ndarray.cpp  numpy_boost.hpp
pyopcode/src/opcode/: OPC_HybridModel.h  OPC_Model.h  OPC_OBBCollider.h  OPC_OptimizedTree.h  OPC_PlanesCollider.h  OPC_RayCollider.h  OPC_TreeBuilders.h  OPC_TreeCollider.h  OPC_VolumeCollider.h
pyopcode/src/opcode/Ice/: IceContainer.cpp  IceContainer.h  IceFPU.h  IceMemoryMacros.h  IcePreprocessor.h  IceTypes.h
pyopcode/tests/: test_pyopcode.py
